# JoBot

./: .env.example  .gitignore  AGENTS.md  JoBot_Refactor_Plan.md  JoBot_Refactor_Review_2.md  README.md  applications_export.json  implementation_contract_dev_0_1.md  implementation_contract_dev_0_5.md  implementation_contract_dev_1_0.md  implementation_contract_dev_2_0.md  implementation_contract_release_1_0.md  job_application_automaton_plan.md  log.md  operating_summary.md  pyproject.toml  runtime_capability_matrix.md  unified_master_plan.md  worklog.md
.github/workflows/: ci.yml  publish.yml
docs/dev/: architecture.md
docs/user/: cli-reference.md
old_dev_docs/: base_prompt.txt  job_application_automaton_plan.md  plan.md
queues/: blocked.md  improve.md  next.md  now.md  recurring.md
src/jobaut/: __init__.py  task_graph.py  updater.py
src/jobot/: __init__.py  runner.py  scheduler.py  (+1 more)
tests/: conftest.py  test_adapter_registry.py  test_adapters_extra.py  test_advanced.py  test_ai.py  test_alerts_wired.py  test_asp.py  test_asp_12_phase.py  test_browser_session.py  test_captcha_solver.py  test_circuit_breaker.py  test_circuit_breaker_wired.py  test_circuit_wired.py  test_cli_commands.py  test_dedup.py  test_dev2.py  test_discovery.py  test_domain.py  test_evals.py  test_greenhouse_adapter.py  test_manual_logger.py  test_mock_ats_integration.py  test_policy.py  test_policy_cap.py  test_policy_enforced.py  test_qa_engine_wired.py  test_release.py  test_runner_status_check.py  test_skill_extraction.py  test_storage.py  test_task_graph.py  test_tracing_wired.py
(+116 files in other folders)
